--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,93 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
+  <meta charset="utf-8">
+  
+  <!-- custom ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+
+  <style>
+    html, body {
+      padding: 0;
+      margin: 0;
+    }
+
+    .nv-header {
+      position: fixed;
+      width: 100%;
+      height: 110px;
+      line-height: 110px;
+      background-color: #182983;
+    }
+
+    .nv-header img {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    .nv-left { float: left; }
+    .nv-right { float: right; }
+  </style>
+</head>
+<body>
+
+  <div class="nv-header">
+    <img class="nv-left" src="assets/logo-neva.jpg" alt="neva-aero">
+    <img class="nv-right" src="assets/logo-angers.png" alt="Université d'Angers">
+    <img class="nv-right" src="assets/logo-istia.png" alt="ISTIA">
+  </div>
+
+  <!-- custom ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+
+  <main>
+    <h3>Chat!</h3>
+    <div id="protocols" style="float: right">
+      <ul>
+        <li>
+          <input id="websocket" type="checkbox" value="websocket" checked="checked">
+          <label for="websocket">websocket</label>
+        </li>
+        <li>
+          <input id="xhr-streaming" type="checkbox" value="xhr-streaming" checked="checked">
+          <label for="xhr-streaming">xhr-streaming</label>
+        </li>
+        <li>
+          <input id="iframe-eventsource" type="checkbox" value="iframe-eventsource"
+                 checked="checked">
+          <label for="iframe-eventsource">iframe-eventsource</label>
+        </li>
+        <li>
+          <input id="iframe-htmlfile" type="checkbox" value="iframe-htmlfile"
+                 checked="checked">
+          <label for="iframe-htmlfile">iframe-htmlfile</label>
+        </li>
+        <li>
+          <input id="xhr-polling" type="checkbox" value="xhr-polling" checked="checked">
+          <label for="xhr-polling">xhr-polling</label>
+        </li>
+        <li>
+          <input id="iframe-xhr-polling" type="checkbox" value="iframe-xhr-polling"
+                 checked="checked">
+          <label for="iframe-xhr-polling">iframe-xhr-polling</label>
+        </li>
+        <li>
+          <input id="jsonp-polling" type="checkbox" value="jsonp-polling" checked="checked">
+          <label for="jsonp-polling">jsonp-polling</label>
+        </li>
+      </ul>
+    </div>
+
+    <div>
+      <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
+    </div>
+    <div id="log" style="width: 60em; height: 20em; overflow:auto; border: 1px solid black">
+    </div>
+    <form id="chatform">
+      <input id="text" type="text" />
+      <input type="submit" />
+    </form>
+  </main>
+
+
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/sockjs/0.3.4/sockjs.min.js"></script>
   <script>
@@ -82,54 +169,6 @@
         return false;
       });
     });
-</script>
-</head>
-<body>
-<h3>Chat!</h3>
-<div id="protocols" style="float: right">
-  <ul>
-    <li>
-      <input id="websocket" type="checkbox" value="websocket" checked="checked">
-      <label for="websocket">websocket</label>
-    </li>
-    <li>
-      <input id="xhr-streaming" type="checkbox" value="xhr-streaming" checked="checked">
-      <label for="xhr-streaming">xhr-streaming</label>
-    </li>
-    <li>
-      <input id="iframe-eventsource" type="checkbox" value="iframe-eventsource"
-             checked="checked">
-      <label for="iframe-eventsource">iframe-eventsource</label>
-    </li>
-    <li>
-      <input id="iframe-htmlfile" type="checkbox" value="iframe-htmlfile"
-             checked="checked">
-      <label for="iframe-htmlfile">iframe-htmlfile</label>
-    </li>
-    <li>
-      <input id="xhr-polling" type="checkbox" value="xhr-polling" checked="checked">
-      <label for="xhr-polling">xhr-polling</label>
-    </li>
-    <li>
-      <input id="iframe-xhr-polling" type="checkbox" value="iframe-xhr-polling"
-             checked="checked">
-      <label for="iframe-xhr-polling">iframe-xhr-polling</label>
-    </li>
-    <li>
-      <input id="jsonp-polling" type="checkbox" value="jsonp-polling" checked="checked">
-      <label for="jsonp-polling">jsonp-polling</label>
-    </li>
-  </ul>
-</div>
-
-<div>
-  <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
-</div>
-<div id="log" style="width: 60em; height: 20em; overflow:auto; border: 1px solid black">
-</div>
-<form id="chatform">
-  <input id="text" type="text" />
-  <input type="submit" />
-</form>
+  </script>
 </body>
 </html>
