--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,6 @@
       position: fixed;
       top: 0;
       left: 0;
-      overflow: auto;
       width: 100%;
       height: 110px;
       line-height: 110px;
@@ -28,6 +27,9 @@
       margin-right: 16px;
     }
 
+    .nv-logo-neva { margin-top: -4px }
+    .nv-logo-istia { height: 90px; width: auto; }
+
     .nv-left { float: left; }
     .nv-right { float: right; }
   </style>
@@ -35,10 +37,10 @@
 <body>
 
   <div class="nv-header">
-    <img src="assets/logo-neva.jpg" alt="neva-aero">
+    <img class="nv-logo-neva" src="assets/logo-neva.jpg" alt="neva-aero">
     <div class="nv-right">
       <img src="assets/logo-angers.png" alt="Université d'Angers">
-      <img style="height: 90px; width: auto" src="assets/logo-istia.png" alt="ISTIA">
+      <img class="nv-logo-istia" src="assets/logo-istia.png" alt="ISTIA">
     </div>
   </div>
 
